// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`documentToReactTree does not render unrecognized marks 1`] = `
Array [
  <p>
    [Function]
  </p>,
]
`;

exports[`documentToReactTree renders asset hyperlink 1`] = `
Array [
  <p>
    [Function]
  </p>,
]
`;

exports[`documentToReactTree renders blockquotes 1`] = `
Array [
  <p>
    [Function]
  </p>,
  <blockquote>
    [Function]
  </blockquote>,
]
`;

exports[`documentToReactTree renders default entry link block 1`] = `
Array [
  <div>
    [Function]
  </div>,
]
`;

exports[`documentToReactTree renders embedded entry 1`] = `
Array [
  <p>
    [Function]
  </p>,
]
`;

exports[`documentToReactTree renders empty node if type is not recognized 1`] = `
Array [
  null,
]
`;

exports[`documentToReactTree renders entry hyperlink 1`] = `
Array [
  <p>
    [Function]
  </p>,
]
`;

exports[`documentToReactTree renders horizontal rule 1`] = `
Array [
  <p>
    [Function]
  </p>,
  <hr />,
  <p>
    [Function]
  </p>,
]
`;

exports[`documentToReactTree renders hyperlink 1`] = `
Array [
  <p>
    [Function]
  </p>,
]
`;

exports[`documentToReactTree renders marks with default mark renderer 1`] = `
Array [
  <p>
    [Function]
  </p>,
]
`;

exports[`documentToReactTree renders marks with default mark renderer 2`] = `
Array [
  <p>
    [Function]
  </p>,
]
`;

exports[`documentToReactTree renders marks with default mark renderer 3`] = `
Array [
  <p>
    [Function]
  </p>,
]
`;

exports[`documentToReactTree renders marks with default mark renderer 4`] = `
Array [
  <p>
    [Function]
  </p>,
]
`;

exports[`documentToReactTree renders marks with the passed custom mark rendered 1`] = `
Array [
  <p>
    [Function]
  </p>,
]
`;

exports[`documentToReactTree renders multiple marks with default mark renderer 1`] = `
Array [
  <p>
    [Function]
  </p>,
]
`;

exports[`documentToReactTree renders nodes with default node renderer 1`] = `
Array [
  <p>
    [Function]
  </p>,
]
`;

exports[`documentToReactTree renders nodes with default node renderer 2`] = `
Array [
  <h1>
    [Function]
  </h1>,
]
`;

exports[`documentToReactTree renders nodes with default node renderer 3`] = `
Array [
  <h2>
    [Function]
  </h2>,
]
`;

exports[`documentToReactTree renders nodes with passed custom node renderer 1`] = `
Array [
  <Paragraph>
    [Function]
  </Paragraph>,
]
`;

exports[`documentToReactTree renders ordered lists 1`] = `
Array [
  <ol>
    [Function]
  </ol>,
  <p>
    [Function]
  </p>,
]
`;

exports[`documentToReactTree renders unordered lists 1`] = `
Array [
  <ul>
    [Function]
  </ul>,
  <p>
    [Function]
  </p>,
]
`;
